--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,44 @@
 .App-link {
   color: #09d3ac;
 }
+
+.links{
+  text-decoration: none !important;
+  color: #e3f6f5;
+}
+
+.navbg{
+  background-color: #272343;
+}
+
+.round{
+  border-radius: 50%;
+}
+
+.constant{
+  color: #e64900;
+  margin-top: 7px;
+}
+
+.bar{
+  width: 5px;
+  margin: 0 2px;
+  background-color: #17a2b8;
+  display: inline-block;
+}
+.main{
+  width: 100%;
+  position: absolute;
+  bottom: 40px;
+  text-align: center;
+}
+
+.footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #272343;
+  color: white;
+  text-align: center;
+}
